cleanup and customizing docs